style.css
body {
    min-height: 100vh;
    margin: 0;
    font-family: Roboto, sans-serif;
    display: flex; 
    flex-direction: column;
}

.header {
    background-color: #1f2937;
}

#hero-logo {
    color: #f9faf8;
    font-size: 24px;
}

#hero-main {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
}

.header {
    justify-content: space-around;
}

#header-title {
    text-align: center;
}

.upper {
    display: flex;
    justify-content: space-between;
    padding-left: 55px;
    padding-right: 55px;
}

.lower {
    display: flex;
    justify-content: space-between;
    padding: 50px;
}

ul {
    list-style-type: none;
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
}

button {
    background-color: #3882f6;
    border-radius: 4px;
    padding: 8px;
    text-align: center;
    margin: auto;
    color: white;
}

#hero-secondary-text {
    display: flex;
    flex-wrap: wrap;
}

#hero-secondary-text,
ul {
    font-size: 18px;
    color: #e5e7eb;
}

.container {
    flex: 1;
}

.upper-content img {
    border: 2px solid #3882f6;
    border-radius: 8px;
    height: 300px;
    width: 300px;
}

.upper-content-images {
    display: flex;
    justify-content: center;
    gap: 48px;
    margin: 20px 0 20px 0;
}

.middle-content {
    background-color: #e5e7eb;
    padding: 60px 120px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.quote-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
}

#quote {
    font-size: 36px;
    color: #1f2937;
    font-weight: 300;
    padding: 68px;
}

#author {
    font-weight: bold;
    align-self: flex-end;
    margin-right: 100px;
}

.prompt {
    background-color: #3882f6;
    border-radius: 4px;
}

.lower-content {
    border: 2px solid blueviolet;
    padding: 48px;
}

.footer {
    background-color: #1f2937;
    display: flex;
    justify-content: center;
    align-items: center;  
    color: white;
    padding: 24px; 
}

